codex-rs/tui-integration-tests/tests/snapshots/input_handling__ctrl_c_clears.snap
---
source: tui-integration-tests/tests/input_handling.rs
expression: normalize_for_snapshot(session.screen_contents())
---
╭──────────────────────────────────────────────────╮
│ >_ OpenAI Codex (v0.0.0)                         │
│                                                  │
│ model:     mock-acp-agent low   /model to change │
│ directory: [TMP_DIR]                       │
╰──────────────────────────────────────────────────╯

  To get started, describe a task or try one of these commands:

  /init - create an AGENTS.md file with instructions for Codex
  /status - show current session configuration
  /approvals - choose what Codex can do without approval
  /model - choose what model and reasoning effort to use
  /review - review any changes and find issues


› [DEFAULT_PROMPT]

  ctrl + c again to quit
