codex-rs/tui-integration-tests/tests/snapshots/input_handling__model_changed.snap
---
source: tui-integration-tests/tests/input_handling.rs
expression: normalize_for_snapshot(session.screen_contents())
---
› /model

  /model  choose what model and reasoning effort to use
